test_suite5/ALAN/test_suite/alan-2022-examples/failing/003280_mutation.alan
source W7 begin if 4 then relax else relax else end end
